# GIF_OfflineAnalysis

./: CMakeLists.txt  ChannelsMapping.csv  DimensionsRE.ini  DimensionsRE.ini~  NoiseRate.h  README.md  Setup-detal-list.csv  cleandir.sh  config.h.in  macro  makefile  run.sh
Dimension/: Dimension.ini.template
Dimensions/: DimensionsRE_20150928-20160512.ini  DimensionsRE_20160512-2016XXXX.ini  Dimensions_20150928-20160512.ini  Dimensions_20160526-2016XXXX.ini
Mappings/: ChannelsMapping.csv  ChannelsMapping_T1_20150718-20150719.csv  ChannelsMapping_T1_20150719-20150729.csv  ChannelsMapping_T1_20150729-20150817.csv  ChannelsMapping_T1_EveningShift20150721-NightShift20150722.csv  ChannelsMapping_T1_Morning-NightShift20150719.csv  ChannelsMapping_T1_T3_20150817-20150826.csv  ChannelsMapping_T1_T3_20150826-20150828.csv  ChannelsMapping_T1_T3_20150828-20150928.csv  ChannelsMapping_T1_T3_20150828_ATLAS.csv  ChannelsMapping_T1_T3_20150928-20160512.csv  ChannelsMapping_T1_T3_20160526-2016XXXX.csv  ChannelsMapping_Trolley1_NightShift20150722.csv
clustersize/: ChannelsMapping_Trolley1.csv  ChannelsMapping_Trolley1_4TDCs.csv  ClusterSize.C  ClusterSize.h  Makefile
clustersize/AnalysedData/: README
include/: Cluster.h  ClusterSize.h  Current.h  DIP.h  EffClustZero.h  EffLevelZero.h  GIFTrolley.h  Header_logfiles.h  Infrastructure.h  IniFile.h  Mapping.h  MsgSvc.h  NoiseRate.h  OfflineAnalysis.h  Profile.h  RPCDetector.h  RPCHit.h  types.h  utils.h
src/: Cluster.cc  ClusterSize.C  Current.cc  DIP.cc  EffClustZero.cc  EffLevelZero.cc  GIFTrolley.cc  Header_logfiles.cc  Infrastructure.cc  IniFile.cc  Mapping.cc  MsgSvc.cc  NoiseRate.cc  NoiseRate.cc.autosave  NoiseRate.cc.save  NoiseRate_cc.d  OfflineAnalysis.cc  Profile.cc  RPCDetector.cc  RPCHit.cc  main.cc  utils.cc
